<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/what_is_your_gender"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:text="@string/you_can_later_change_who_can_see_your_gender_on_your_profile"
        android:textSize="15dp" />

    <RadioGroup
        android:id="@+id/rdiGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdiMale"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:gravity="start|center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/male"
            android:textAllCaps="false" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#AEA1A1" />

        <RadioButton
            android:id="@+id/rdiFemale"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start|center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/female"
            android:textAllCaps="false" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#AEA1A1" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/bg_btn_gradient"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>