<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="ViewModel"
            type="com.knd.duantotnghiep.phonetrackerlocation.ui.account.signUp.phoneNumber.ConfirmPhoneNumberViewModel" />
    </data>

    <com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:shimmer_auto_start="true"

        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
 >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_telephone_number"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="Vui lòng nhập hợp lệ số điện thoại hoặc địa chỉ email của bạn."
                android:textColor="#EC1313"
                android:textSize="15sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                app:errorEnabled="true"
                 app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:text="@={ViewModel.phoneNumber}"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_password"
                    android:inputType="textAutoComplete"
                    android:text="@={ViewModel.password}"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/bg_btn_gradient"
                android:foreground="?attr/selectableItemBackground"
                 android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
</layout>