<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ViewModel"
            type="com.knd.duantotnghiep.phonetrackerlocation.ui.account.signIn.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/don_t__account"
                    android:textColor="@color/shadow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnLaunchGetStarted"
                    app:layout_constraintStart_toEndOf="@+id/imgBack"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLaunchGetStarted"
                    style="@style/btn_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/text_btn_intro"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/title_app"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <ImageView
                android:id="@+id/imageView"
                style="@style/mlayout_shadow"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_35sdp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                style="@style/mContent_account"
                android:layout_height="match_parent"
                android:padding="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/title_regis"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/mess_login"
                    android:textColor="@color/shadow"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <FrameLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputPhone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:hint="@string/hint_phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:paddingStart="@dimen/_120sdp"
                            android:text="@={ViewModel.txtPhoneNumber}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCode"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:ccp_defaultNameCode="us"

                        app:ccp_hintExampleNumberType="PREMIUM_RATE" />
                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:passwordToggleEnabled="true"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPass"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:hint="@string/hint_password"

                        android:text="@={ViewModel.txtPassword}" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLoginForPass"
                    style="@style/CustomAppCompatButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/sign_in"

                    app:layout_constraintTop_toBottomOf="@+id/textInputPass"
                    tools:layout_editor_absoluteX="20dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLoginForPass" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <View
                        android:id="@+id/view1"
                        android:layout_width="0dp"
                        android:layout_height="1.5dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/shadow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_sign_in_with"
                        android:textColor="@color/shadow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1.5dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/shadow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLoginGg"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="5"
                        android:background="@drawable/outlined_box"
                        android:drawableStart="@drawable/ic_gg"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:text="@string/google"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/mLoginFb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLoginFb"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="5"
                        android:background="@drawable/outlined_box"
                        android:drawableStart="@drawable/ic_fb"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_15sdp"
                        android:text="@string/facebook"
                        android:textColor="@color/gradient_start_color"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/overlayView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#80000000"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/load_anim"
                    app:lottie_repeatCount="100"
                    app:lottie_repeatMode="reverse" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>